# pontia

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  MILESTONE.md  README.md  config.example.toml  justfile
.cargo/: config.toml
.claude-plugin/: marketplace.json
apps/dashboard/: README.md  index.html  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.json  (+1 more)
control/agent-clients/: Cargo.toml
control/agent-clients/src/: generic_test.rs  lib.rs  types.rs
control/agent-clients/src/claude/: mod.rs
control/agent-clients/src/pi/: mod.rs  topology.rs
control/agent-clients/src/pi/raw_transcripts/: detail.rs  jsonl.rs  mapping.rs  mod.rs  refs.rs  resolver.rs  timeline.rs  tool_use.rs  user_entry.rs
control/agent-clients/src/raw_transcripts/: linear.rs  mod.rs  source.rs  traits.rs  types.rs
control/agent-clients/src/topology/: mod.rs
control/agent-clients/tests/: crate_boundary.rs  pi_timeline_boundary.rs  pi_topology.rs  pi_user_entry_resolution.rs
control/config/: Cargo.toml
control/config/src/: lib.rs
control/config/tests/: config.rs
control/core/: Cargo.toml
control/core/src/: error.rs  ids.rs  lib.rs  time.rs
control/core/src/domain/: event.rs  mod.rs  projection.rs  state.rs
control/core/tests/: foundations.rs  reducer.rs
control/dag/: Cargo.toml
control/dag/src/: dag_scheduler.rs  lib.rs  mapping.rs  prompt_rendering.rs  queries_dag.rs  tasks.rs
control/dag/src/agent_tools/: mod.rs  rendering.rs  resolver.rs
control/dag/src/dag/: helpers.rs  initial_apply.rs  projection.rs  proposals.rs
control/dag/src/dag_run_result/: aggregate.rs  mod.rs
control/dag/src/graph/: mod.rs  service.rs  store.rs  types.rs
control/dag/src/graph/lbug_store/: path.rs  rows.rs
control/dag/src/profiles/: mod.rs  models.rs
control/dag/tests/: completion_aggregate.rs  graph_projection.rs
control/dag/tests/dag_migration/: planner_flow.rs  run_result.rs  runtime.rs  scheduler.rs
control/dag/tests/support/: generic_client.rs
control/http/: Cargo.toml
control/http/src/: dashboard.rs  health.rs  internal.rs  internal_agent_tools.rs  lib.rs  state.rs
control/http/tests/: agent_tools.rs  api.rs  client_pi_planner_and_hooks.rs  dag_api.rs  dag_boundary.rs  e2e.rs  runtime_generic_adapter_contract.rs  runtime_generic_lifecycle.rs
control/http/tests/agent_tools/: plan_approval.rs  raise_signal.rs  submit_plan.rs
control/http/tests/api/: agent_profile.rs  artifact_content.rs  artifact_discovery.rs  external_event_stream.rs  external_queries.rs  health.rs  internal_event.rs  raw_transcript.rs  runtime_binding_upsert.rs  runtime_lifecycle.rs  session_create.rs  session_inbox.rs  session_workspace_linking.rs  task_creation.rs  task_lifecycle.rs  test_app_support.rs  turn_submit.rs  workspace.rs
control/http/tests/clients/: pi_planner_and_hooks.rs
control/http/tests/dag_api/: external_api.rs  human_control_api.rs  task_api.rs
control/http/tests/e2e/: web_dashboard.rs
control/http/tests/support/: agent_tools.rs  events.rs  generic_client.rs  http.rs  task_state.rs  test_app.rs
control/pontia/: Cargo.toml
control/pontia/src/: lib.rs  main.rs
control/runtime/: Cargo.toml
control/runtime/src/: config.rs  in_process.rs  lib.rs  manager.rs  paths.rs  script.rs  tmux.rs  types.rs  utils.rs
control/runtime/src/tmux/: dispatch.rs  identifier.rs  marker.rs  mod.rs  pane.rs  session.rs
control/runtime/tests/: crate_boundary.rs  interrupt.rs
docs/: README.md
migrations/: 0001_init.sql  0002_domain_events.sql  0003_global_workspaces_tasks.sql  0006_session_role_description.sql  0007_execution_profiles.sql  0010_active_session_handle_uniqueness.sql  0011_dag_signal_source.sql  0013_archive_execution_profiles.sql  0014_remove_generic_from_builtin_profiles.sql  0015_add_replan_anchor_runtime_state.sql  0017_flexible_dag_patch.sql  0019_execution_profile_agent_kind.sql  0021_dag_proposal_revisions.sql  0023_update_planner_prompt.sql  0024_dag_proposals_created_by_turn.sql  0025_update_pilotfy_brand.sql  0030_workspace_git_status.sql  0031_runtime_bindings_structured_fields.sql
scripts/: dev-dashboard.sh  download-ladybug-prebuilt.sh  sqlx-check-db.sh
spec/: 00-product-vision.md  01-control-plane-overall-design.md  02-control-plane-internal-event-api-v1.md  03-control-plane-domain-state-storage-design.md  04-control-plane-runtime-manager-tmux-design.md  05-control-plane-client-filesystem-artifact-adapter-design.md  06-control-plane-external-api-v1.md  07-control-plane-client-adapter-pi-design.md  08-control-plane-web-ui-websocket-design.md  2026-05-02-global-task-workspace-data-design.md  2026-05-05-planner-assisted-dispatch-and-kuzu-seed-design.md  2026-05-06-ladybug-migration-agent-guide.md
specs/: 00-product-vision.md  08-control-plane-web-ui-websocket-design.md  2026-05-04-sqlite-persistence-scaling-notes.md  2026-05-06-agent-graph-model-design.md  2026-05-09-session-inbox-design.md  2026-06-09-raw-sources-transcript-design.md  2026-06-15-pi-runtime-binding-upsert-design.md  2026-06-15-pi-runtime-binding-upsert-phase6-validation.md
src/: agent_clients.rs  config.rs  error.rs  ids.rs  lib.rs  main.rs
tests/: agent_clients_boundary.rs  agent_profile_api.rs  agent_tools.rs  agent_tools_authorization_api.rs  agent_tools_context_api.rs  agent_tools_internal_api.rs  agent_tools_plan_approval_api.rs  agent_tools_raise_signal_api.rs  agent_tools_submit_plan_api.rs  agent_tools_submit_result_api.rs  api.rs  artifact_content_api.rs  artifact_discovery_api.rs  capabilities_boundary.rs  claude_code_adapter.rs  client_claude_code_adapter.rs  client_pi_planner_and_hooks.rs  client_pi_runtime_basic.rs  config.rs  core_crate_boundary.rs  dag.rs  dag_completion_aggregate.rs  dag_external_api.rs  dag_human_control_api.rs  dag_planner_flow.rs  dag_run_result.rs  dag_runtime.rs  dag_scheduler.rs  dag_task_api.rs  domain.rs  domain_reducer.rs  domain_storage_projection.rs  e2e.rs  external_api_queries.rs  external_event_stream_api.rs  foundations.rs  generic_adapter_contract.rs  generic_runtime_m1.rs  global_workspace_tasks.rs  graph_projection.rs  (+41 more)
(+704 files in other folders)
