[workspace]
members = [".", "control/core", "control/storage-sqlite", "control/agent-clients", "control/config", "control/runtime"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
lbug = { version = "0.16.1", default-features = false }
serde = "1"
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "migrate", "macros"] }
thiserror = "2"
time = "0.3"
uuid = "1"

[package]
name = "pontia"
version.workspace = true
edition.workspace = true

[dependencies]
axum = "0.8"
dotenvy = "0.15"
lbug = { workspace = true, optional = true }
pontia-agent-clients = { path = "control/agent-clients" }
pontia-config = { path = "control/config" }
pontia-core = { path = "control/core", default-features = false }
pontia-runtime = { path = "control/runtime", default-features = false }
pontia-storage-sqlite = { path = "control/storage-sqlite" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
sqlx.workspace = true
tar = "0.4"
thiserror.workspace = true
time = { workspace = true, features = ["formatting", "parsing", "serde"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "net", "time"] }
tokio-stream = "0.1"
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { workspace = true, features = ["v7", "serde"] }
flate2 = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
http-body-util = "0.1"
tempfile = "3"
tower = { version = "0.5", features = ["util"] }

[features]
default = ["lbug"]
lbug = ["dep:lbug", "pontia-core/lbug", "pontia-agent-clients/lbug", "pontia-config/lbug", "pontia-runtime/lbug"]
