[workspace]
members = [
    "control/pontia",
    "control/core",
    "control/storage-sqlite",
    "control/agent-clients",
    "control/config",
    "control/runtime",
    "control/application",
    "control/http",
]
default-members = ["control/pontia"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
lbug = { version = "0.16.1", default-features = false }
serde = "1"
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "migrate", "macros"] }
thiserror = "2"
time = "0.3"
uuid = "1"
