[package]
name = "pontia-core"
version.workspace = true
edition.workspace = true

[dependencies]
lbug = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true, features = ["formatting", "parsing", "serde"] }
uuid = { workspace = true, features = ["v7", "serde"] }

[features]
default = ["lbug"]
lbug = ["dep:lbug"]
