[package]
name = "pontia-http"
version.workspace = true
edition.workspace = true

[dependencies]
axum = "0.8"
flate2 = "1"
pontia-application = { path = "../application", default-features = false }
pontia-config = { path = "../config", default-features = false }
pontia-core = { path = "../core", default-features = false }
pontia-dag = { path = "../dag", default-features = false }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tar = "0.4"
time = { workspace = true, features = ["formatting", "parsing", "serde"] }
tokio = { version = "1", features = ["sync", "time", "net"] }
tokio-stream = "0.1"
tracing = "0.1"
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
http-body-util = "0.1"
pontia-agent-clients = { path = "../agent-clients" }
pontia-application = { path = "../application" }
pontia-dag = { path = "../dag" }
pontia-runtime = { path = "../runtime" }
pontia-storage-sqlite = { path = "../storage-sqlite" }
sqlx.workspace = true
tempfile = "3"
tower = { version = "0.5", features = ["util"] }

[features]
default = []
