[package]
name = "pontia-runtime"
version.workspace = true
edition.workspace = true

[dependencies]
pontia-agent-clients = { path = "../agent-clients", default-features = false }
pontia-config = { path = "../config", default-features = false }
pontia-core = { path = "../core", default-features = false }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
time = { workspace = true, features = ["formatting"] }

[dev-dependencies]
tempfile = "3"
